feat: added new links

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 								<li><a href="https://www.linkedin.com/in/mattfromnewzealand" class="fa-linkedin">LinkedIn</a></li>
 								<li><a href="https://twitter.com/splnty" class="fa-twitter">Twitter</a></li>
 								<li><a href="https://www.instagram.com/sustainability_is_key/" class="fa-instagram">Instagram</a></li>
-								
+								<li><a href="https://discord.gg/0qKEaUu5j2nHLzDE" class="fa-comment">Chat</a></li>
+								<li><a href="http://bit.ly/MattsSchedule" class="fa-calendar">Chat</a></li>
 							</ul>
 						</footer>
 					</section>
