--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 							<span class="avatar"><img src="images/matt-small.jpg" alt="" /></span>
 							<h1>Matt Smith</h1>
 							<p>IT Innovator & Sustainability Researcher</p>
+							<p>Top 10 Connected LinkedIn Profile in World</p>
 						</header>
 						
 						<hr />
