feat: wording update

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/mattfromnewzealand" class="fa-linkedin">LinkedIn</a></li>
 								<li><a href="https://twitter.com/splnty" class="fa-twitter">Twitter</a></li>
-								<li><a href="https://www.instagram.com/sustainability_is_key/" class="fa-instagram">Instagram</a></li>
+								<li><a href="https://www.instagram.com/mattfromnewzealand/" class="fa-instagram">Instagram</a></li>
 								<li><a href="https://discord.gg/0qKEaUu5j2nHLzDE" class="fa-comment">Chat</a></li>
 								<li><a href="http://bit.ly/MattsSchedule" class="fa-calendar">Chat</a></li>
 							</ul>
@@ -86,7 +86,8 @@
 			c.width = window.innerWidth;
 
 			//word characters - taken from the unicode charset
-			var word = "ムタ二コク170589シモラキリエスハヌトユMATTSMITH";
+			//good work you figured it out go to ./1989
+			var word = "ムタ二コク1989シモラキリエスハヌトユMATTSMITH";
 			//converting the string into an array of single characters
 			word = word.split("");
 
